--- a/css-ex3/styles.css
+++ b/css-ex3/styles.css
@@ -1,36 +1,43 @@
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto;
     min-height: 100vh;
+    grid-template-areas: 
+        "header header header"
+        "box1 box1 box2"
+        "footer footer footer";
 }
 
 header {
     background-color: gold;
-    grid-column-start: 1;
-    grid-column-end: span 3;
-    grid-row-start: 1;
-    grid-row-end: span 1;
+    grid-area: header;
 }
 
 
 .box1 {
     background-color: forestgreen;
-    grid-row-start: 2;
-    grid-row-end: span 2;
-    grid-column-start: 1;
-    grid-column-end: span 3;
+    grid-area: box1;
 }
+.box2 {
+    background-color: grey;
+    grid-area: box2;
+}
+
+
 
 footer {
     background-color: fuchsia;
-    grid-column-start: 1;
-    grid-column-end: span 3;
-    grid-row-start: 3;
-    grid-row-end: span 3;
+    grid-area: footer;
 }
+
 @media all and (max-width: 600px) {
-    body {
-        color: blue;
+    .container {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "header"
+            "box1"
+            "box2"
+            "footer";
     }
 }
